setting up login page

--- a/learning_app/pubspec.yaml
+++ b/learning_app/pubspec.yaml
@@ -37,6 +37,7 @@ flutter:
     - assets/images/password_icon.png
     - assets/images/user_icon.png
     - assets/images/as.png
+    - assets/images/login.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
