--- a/learning_app/pubspec.yaml
+++ b/learning_app/pubspec.yaml
@@ -4,6 +4,8 @@ description: A new Flutter application.
 dependencies:
   flutter:
     sdk: flutter
+  sqflite:
+  path:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
