--- a/learning_app/android/app/build.gradle
+++ b/learning_app/android/app/build.gradle
@@ -28,7 +28,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "flutterdemo.aeologic.com.flutterprofilepage"
+        applicationId "flutterdemo.aeologic.com.learningApp"
         minSdkVersion 16
         targetSdkVersion 27
         versionCode 1
