--- a/learning_app/pubspec.yaml
+++ b/learning_app/pubspec.yaml
@@ -1,4 +1,4 @@
-name: Learning App
+name: learningApp
 description: A new Flutter application.
 
 dependencies:
@@ -35,9 +35,6 @@ flutter:
   assets:
     - assets/images/logo.png
     - assets/images/powered_by.png
-    - assets/images/email_icon.png
-    - assets/images/password_icon.png
-    - assets/images/user_icon.png
     - assets/images/as.png
     - assets/images/login.png
 
