--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,51 +1,48 @@
-# This is a basic workflow to help you get started with Actions
-
 name: Flutter CI
 
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
+# This workflow is triggered on pushes to the repository.
+
 on:
   push:
-    branches: 
+    branches:
     - master
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+    
+# on: push    # Default will running for every branch.
+    
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
+    # This job will run on ubuntu virtual machine
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+    
     # Setup Java environment in order to build the Android app.
     - uses: actions/checkout@v1
     - uses: actions/setup-java@v1
       with:
         java-version: '12.x'
+    
     # Setup the flutter environment.
     - uses: subosito/flutter-action@v1
       with:
         channel: 'beta' # 'dev', 'alpha', default to: 'stable'
         # flutter-version: '1.12.x' # you can also specify exact version of flutter
-
-    # Runs a single command using the runners shell
-    - name: Get Flutter dependencies
-      run: flutter pub get
-
-    # Runs a set of commands using the runners shell
-    - name: Check for formatting issues
-      run: flutter format --set-exit-if-changed
-
-    - name: Analyze Dart code for error
-      run: flutter analyze .
     
-    - name: Run widget tests for Flutter project
-      run: flutter test
+    # Get flutter dependencies.
+    - run: flutter pub get
     
-    - name: Build Android APK
-      run: flutter build apk
+    # Check for any formatting issues in the code.
+    - run: flutter format --set-exit-if-changed .
     
+    # Statically analyze the Dart code for any errors.
+    - run: flutter analyze .
+    
+    # Run widget tests for our flutter project.
+    - run: flutter test
+    
+    # Build apk.
+    - run: flutter build apk
+    
+    # Upload generated apk to the artifacts.
     - uses: actions/upload-artifact@v1
       with:
         name: release-apk
