--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,28 +21,28 @@ jobs:
       with:
         java-version: '12.x'
     
-    # Setup the flutter environment.
+    # Setup the flutter environment
     - uses: subosito/flutter-action@v1
       with:
         channel: 'beta' # 'dev', 'alpha', default to: 'stable'
         # flutter-version: '1.12.x' # you can also specify exact version of flutter
     
-    # Get flutter dependencies.
+    # Get flutter dependencies
     - run: flutter pub get
     
-    # Check for any formatting issues in the code.
+    # Check for any formatting issues in the code
     - run: flutter format --set-exit-if-changed .
     
-    # Statically analyze the Dart code for any errors.
+    # Statically analyze the Dart code for any errors
     - run: flutter analyze .
     
-    # Run widget tests for our flutter project.
+    # Run widget tests for our flutter project
     - run: flutter test
     
-    # Build apk.
+    # Build apk
     - run: flutter build apk
     
-    # Upload generated apk to the artifacts.
+    # Upload generated apk to the artifacts
     - uses: actions/upload-artifact@v1
       with:
         name: release-apk
