--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 build/
 
 .flutter-plugins
-.flutter.plugins-dependencies
+.flutter-plugins-dependencies
 
 Generated.xcconfig
 flutter_export_environment.sh
