--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,6 +6,8 @@ dependencies:
     sdk: flutter
   sqflite:
   path:
+  flutter_secure_storage: ^3.3.3
+  http: ^0.12.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
