--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,8 @@ dependencies:
   path:
   flutter_secure_storage: ^3.3.3
   http: ^0.12.2
+  ext_storage:
+  permissions_plugin: ^1.1.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
